# rag-agent

./: .env-template  .gitignore  .tool-versions  README.md  fetch.py  fetch_and_ingest.py  ingest.py  main.py  pyproject.toml
docker/dev/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
src/agents/rag/: answer_grader.py  edges.py  generate.py  graph.py  hallucination_grader.py  nodes.py  question_rewriter.py  retrieval_grader.py  state.py  tools.py
src/scrapers/discourse/: client.py
src/scrapers/gitlab/: client.py
src/sources/: engine.py  methods.py  models.py
src/tools/: loaders.py
src/vector_store/: consts.py  pgvector.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  TemplateFrame.jsx
web/src/components/: ResourceCard.jsx  ResponseTimeline.jsx
